# Messenger

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Message.cpp  Message.h  MessageVisitor.h  Queue.h  common.cmake  greeter_client.cc  main.cc  main.cpp  message.cc  message.h  message_visitor.h  messenger_server.cc  queue.h
Interface/: InterfaceService.cpp  InterfaceService.h
Net/: NetService.cpp  NetService.h
client/: message.cc  message.h  message_visitor.h
client/interface/: interface_service.cc  interface_service.h
client/net/: net_service.cc  net_service.h
database/: credentials_db.cc  credentials_db.h
interface/: interface_service.cc
net/: net_service.cc  net_service.h
protos/: messenger.proto
server/: messenger_server.cc  server_implementation.cc  server_implementation.h
server/database/: chats_db.cc  chats_db.h  credentials_db.cc  credentials_db.h  database_service.cc  database_service.h  details_db.cc  details_db.h  users_db.cc  users_db.h
tests/: CMakeLists.txt  test_db.cc
